Fix version misalignment for package names

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -198,6 +198,7 @@ body {
         .flight-version {
             margin-right: 0.5rem;
             font-size: 90%;
+            text-align: right;
         }
     }
 
